[tool.poetry]
name = "strplus"
version = "0.0.7"
authors = ["Silvio Liborio <silvio.liborio@wiseupdata.com>"]
readme = "README.md"

description = "Python extra functions for strings"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/wiseupdata/strplus"
"Bug Tracker" = "https://github.com/wiseupdata/strplus/issues"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.0"
ipykernel = "^6.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
