[tool.poetry]
name = "strplus"
version = "1.0.2"
authors = ["Silvio Liborio <silvio.liborio@wiseupdata.com>"]
readme = "README.md"

description = "Python extra functions for strings"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/wiseupdata/strplus"
"Bug Tracker" = "https://github.com/wiseupdata/strplus/issues"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.0"
ipykernel = "^6.22.0"
sphinx = "^6.1.3"
yummy-sphinx-theme = "^0.1.1"
pytest-cov = "^4.0.0"
coverage = "^7.2.3"
black = "^23.3.0"
isort = "^5.12.0"
sphinx-material = "^0.0.35"
pygments = "^2.15.0"
sphinx-copybutton = "^0.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
